--- a/microservices-user/pom.xml
+++ b/microservices-user/pom.xml
@@ -49,6 +49,10 @@
 			<artifactId>commons-domain</artifactId>
 			<version>0.0.1-SNAPSHOT</version>
 		</dependency>
+		<dependency>
+			<groupId>org.springframework.cloud</groupId>
+			<artifactId>spring-cloud-starter-openfeign</artifactId>
+		</dependency>
 
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
